// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SessionList renders a list of sessions 1`] = `
"<div>
  <nav data-testid="session-list" class="flex flex-col overflow-y-auto">
    <div data-testid="session-1" class="group flex items-center border-l-2 transition-colors border-transparent hover:bg-cream/5">
      <button type="button" class="flex-1 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest cursor-pointer text-cream/60 hover:text-cream">
        The Ultimate Hamburger
      </button>
      <button type="button" data-testid="delete-session" class="px-2 py-2 text-cream/30 opacity-0 transition-opacity cursor-pointer group-hover:opacity-100 hover:text-red">
        <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
          <path d="M3 6h18">
          </path>
          <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6">
          </path>
          <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2">
          </path>
          <line x1="10" x2="10" y1="11" y2="17">
          </line>
          <line x1="14" x2="14" y1="11" y2="17">
          </line>
        </svg>
      </button>
    </div>
    <div data-testid="session-2" class="group flex items-center border-l-2 transition-colors border-transparent hover:bg-cream/5">
      <button type="button" class="flex-1 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest cursor-pointer text-cream/60 hover:text-cream">
        Skull Face's Objective
      </button>
      <button type="button" data-testid="delete-session" class="px-2 py-2 text-cream/30 opacity-0 transition-opacity cursor-pointer group-hover:opacity-100 hover:text-red">
        <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
          <path d="M3 6h18">
          </path>
          <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6">
          </path>
          <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2">
          </path>
          <line x1="10" x2="10" y1="11" y2="17">
          </line>
          <line x1="14" x2="14" y1="11" y2="17">
          </line>
        </svg>
      </button>
    </div>
    <div data-testid="session-3" class="group flex items-center border-l-2 transition-colors border-transparent hover:bg-cream/5">
      <button type="button" class="flex-1 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest cursor-pointer text-cream/60 hover:text-cream">
        Code Talker and His Research
      </button>
      <button type="button" data-testid="delete-session" class="px-2 py-2 text-cream/30 opacity-0 transition-opacity cursor-pointer group-hover:opacity-100 hover:text-red">
        <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
          <path d="M3 6h18">
          </path>
          <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6">
          </path>
          <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2">
          </path>
          <line x1="10" x2="10" y1="11" y2="17">
          </line>
          <line x1="14" x2="14" y1="11" y2="17">
          </line>
        </svg>
      </button>
    </div>
  </nav>
</div>"
`;

exports[`SessionList renders with a selected session 1`] = `
"<div>
  <nav data-testid="session-list" class="flex flex-col overflow-y-auto">
    <div data-testid="session-1" class="group flex items-center border-l-2 transition-colors border-transparent hover:bg-cream/5">
      <button type="button" class="flex-1 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest cursor-pointer text-cream/60 hover:text-cream">
        The Ultimate Hamburger
      </button>
      <button type="button" data-testid="delete-session" class="px-2 py-2 text-cream/30 opacity-0 transition-opacity cursor-pointer group-hover:opacity-100 hover:text-red">
        <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
          <path d="M3 6h18">
          </path>
          <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6">
          </path>
          <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2">
          </path>
          <line x1="10" x2="10" y1="11" y2="17">
          </line>
          <line x1="14" x2="14" y1="11" y2="17">
          </line>
        </svg>
      </button>
    </div>
    <div data-testid="session-2" class="group flex items-center border-l-2 transition-colors border-orange bg-orange/5">
      <button type="button" class="flex-1 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest cursor-pointer text-orange">
        Skull Face's Objective
      </button>
      <button type="button" data-testid="delete-session" class="px-2 py-2 text-cream/30 opacity-0 transition-opacity cursor-pointer group-hover:opacity-100 hover:text-red">
        <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
          <path d="M3 6h18">
          </path>
          <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6">
          </path>
          <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2">
          </path>
          <line x1="10" x2="10" y1="11" y2="17">
          </line>
          <line x1="14" x2="14" y1="11" y2="17">
          </line>
        </svg>
      </button>
    </div>
    <div data-testid="session-3" class="group flex items-center border-l-2 transition-colors border-transparent hover:bg-cream/5">
      <button type="button" class="flex-1 px-3 py-2 text-left font-nav text-xs uppercase tracking-widest cursor-pointer text-cream/60 hover:text-cream">
        Code Talker and His Research
      </button>
      <button type="button" data-testid="delete-session" class="px-2 py-2 text-cream/30 opacity-0 transition-opacity cursor-pointer group-hover:opacity-100 hover:text-red">
        <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
          <path d="M3 6h18">
          </path>
          <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6">
          </path>
          <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2">
          </path>
          <line x1="10" x2="10" y1="11" y2="17">
          </line>
          <line x1="14" x2="14" y1="11" y2="17">
          </line>
        </svg>
      </button>
    </div>
  </nav>
</div>"
`;

exports[`SessionList renders empty state 1`] = `
"<div>
  <nav data-testid="session-list" class="flex flex-col overflow-y-auto">
  </nav>
</div>"
`;
